--- a/package.oo.yaml
+++ b/package.oo.yaml
@@ -12,11 +12,9 @@ dependencies:
   oomol-transform: 0.0.1
   oomol-file: 0.0.1
 name: ffmpeg-mac
-version: 0.0.2
+version: 0.0.5
 description: Video processing library based on fluent-ffmpeg package, supports
   hardware acceleration of arm archi
 displayName: FFmpeg for Mac
-releaseNotes: Support audio and video separation function
-platform:
-  - os: darwin
-    cpu: arm64
+releaseNotes: update type kind
+repository: https://github.com/oomol-flows/ffmpeg-mac
