update merge block

--- a/flows/test/flow.oo.yaml
+++ b/flows/test/flow.oo.yaml
@@ -1,10 +1,12 @@
 nodes:
   - task: self::read_media_to_ffmpeg
+    title: "Read Media To FFmpeg #1"
     node_id: read_media_to_ffmpeg#1
     inputs_from:
       - handle: video_source
         value: /oomol-driver/oomol-storage/oomol_local.mp4
   - task: self::audio_video_separation
+    title: "Audio Video Separation #1"
     node_id: audio_video_separation#1
     inputs_from:
       - handle: ffmpeg_source
@@ -12,8 +14,8 @@ nodes:
           - node_id: read_media_to_ffmpeg#1
             output_handle: ffmpeg_source
   - task: self::save_video
-    title: "Save Video #2"
-    node_id: save_video#2
+    title: "Save Video #1"
+    node_id: save_video#1
     inputs_from:
       - handle: video_source
         from_node:
@@ -22,20 +24,6 @@ nodes:
       - handle: file_name
         value:
       - handle: formate
-        value: mp4
-      - handle: save_address
-        value:
-  - task: self::save_audio
-    title: "Save Audio #4"
-    node_id: save_audio#4
-    inputs_from:
-      - handle: audio_source
-        from_node:
-          - node_id: audio_video_separation#1
-            output_handle: only_audio
-      - handle: file_name
-        value:
-      - handle: formate
         value:
       - handle: save_address
-        value:
+        value: /oomol-driver/oomol-storage/yyy
